--- a/Getting started/qubit rotation.ipynb
+++ b/Getting started/qubit rotation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A quantum device gets created based on the pure-state qubit simulator provided by PennyLane 'default.qubit'. The device gets only one qubit assigned  'wires=1'. The term wires is used in reference to the well known qiskit paradigma. Every qubit has its own line on which the gates will be apllied."
+    "A quantum device gets created based on the 'pure-state qubit simulator' provided by PennyLane 'default.qubit'. The device gets only one qubit assigned  'wires=1'. The term wires is used in reference to the well known composer paradigma. Every qubit has its own line on which the gates will be apllied."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A QNode will be created which encapsulates a quantum function (circuit). To make the QNode run on dev1 the **'@qml.qnode(dev1)'** decorator is added directly above. Any line inside the function must contain an operation (gate) and specify on which line it has to be applied. The return value must be always be a single or a tuple of measured observables."
+    "A QNode will be created which encapsulates a quantum function (circuit). To make the QNode run on dev1 the **'@qml.qnode(dev1)'** decorator is added directly above.  \n",
+    "Any line inside the function must contain an operation (gate) and specify on which lines (qubits) it is applied.  \n",
+    "Full List of operations: https://pennylane.readthedocs.io/en/latest/introduction/operations.html  \n",
+    "  \n",
+    "The return value must always be a single or a tuple of measured observables.  \n",
+    "Full List of observables: https://pennylane.readthedocs.io/en/latest/introduction/measurements.html  \n",
+    "\n",
+    "__Note:__ Not all devices support all available operations!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,28 +81,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8515405859048367\n"
+      "1.0\n"
      ]
     }
    ],
    "source": [
-    "print(circuit([0.54, 0.12]))"
+    "print(circuit([0, 0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Calculating Quantum Gradients**  \n",
+    "The function 'grad()' is used to differentiate the encapsulated quantum function and gives back the gradient of the function.  \n",
+    "The return value is a function itself. In this specific case a 2D-vector.\n",
+    "\n",
+    "Using grad() can be a bit tricky due to the argnum parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array(-0.51043865), array(-0.1026782)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dcircuit = qml.grad(circuit, argnum=0)\n",
+    "\n",
+    "print(dcircuit([0.54, 0.12]))"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c9a1e97689260f3c5e0ff2b6622a486050f1624a472f7dd78e134ded92b0ad4f"
+   "hash": "afb734500600fd355917ca529030176ea0ca205570884b88f2f6f7d791fd3fbe"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
